 * Removed Review component

2006-09-27 moj
 * Added $icons param before slow_tabs in Session::render_tabs
 * Modified EPrint View and Upload accordingly.

2006-09-28 moj
 * render_tabs now takes a hash of parameters (updated View/Upload)
 * Removed extra space in document citations
 * Removed unnecessary space from upload component

2006-09-28 tmb
 * Made date_embargo a document field rather than an eprint field for finer-
    grained control. This requirement arose out of a Services contract and
    seemed like a good idea to make it a standard feature in EP itself.

2006-09-28 moj
 * More plugin strings shifted to phrases

2006-09-28 moj
 * Phrasing import plugins (unstable atm)

2006-09-28 cjg
 * Added user type to user render 

2006-09-28 cjg
 * In render eprint; changed hascontact to has_contact_email

2006-09-28 cjg
 * added new roles, edit-own-record and general (general needs to be removed
    asap)
 * Fixed urls of icons for file icons and arrows
 * Added scriptlicious and prototypes.js
 * Added id's to all metafield input and select
 * Added id's to cells in metafield input grids
 * Added hacky issn script - remove it again later (used for drop downs)
 * Added example drop downs to issn and creators fields (tidy later)
 * Removed underlines from all hide/show links and tabs and blister bar
 * Made tabs and blister bar work when you click anywhere in them, not just 
    the text.
 * Made icons right align in tabs.
 * Added class ep_form_text to all text <input> tags to allow them to be
    styled without effecting buttons.
 * Added get_basic_input_ids which lists the ids of the fields in a metafield
 * cfg.d/ no only loads .pl files
 * Added staff actions screen
 * removed for_archive required restriction - we'll do it better another way
 * Added user and userid as a property to all screens, not just user screens,
    this is needed to make the toolbar understand if you can edit your record 
    or not.

2006-09-29 moj
 * Added login failed phrase